package draughts.models;

public enum Color {
    WHITE,
    BLACK
}
